# rust-camp-follow

./: .gitignore  Cargo.toml  README.md  cliff.toml
camp-core/: Cargo.toml
camp-core/src/: config.rs  core_fake.rs  core_types.rs  lib.rs  proto.rs
camp-crm/: .env  Cargo.toml  build.rs  crm.yml
camp-crm/examples/: fake_100000.rs  main.rs
camp-crm/migrations/: 20240702091326_initial.sql
camp-crm/src/: client.rs  config.rs  lib.rs  main.rs  metadata.rs  server.rs
camp-crm/src/abi/: mod.rs
camp-crm/src/ioc/: mod.rs
camp-crm/src/model/: mod.rs
camp-crm/src/pb/: crm.rs  mod.rs
camp-crm/src/services/: metadata.rs  mod.rs  notification.rs  user_stat.rs
camp-macro/: Cargo.toml
camp-macro/src/: main.rs
camp-metadata/: Cargo.toml  build.rs  metadata.yml
camp-metadata/examples/: echo_client.rs
camp-metadata/src/: config.rs  lib.rs  main.rs
camp-metadata/src/abi/: mod.rs
camp-metadata/src/pb/: metadata.rs
camp-metadata/tests/: metadata.rs
camp-notification/: .env  Cargo.toml  build.rs  notification.yml
camp-notification/fixtures/: data.sql
camp-notification/migrations/: 20240711144334_initial.sql
camp-notification/src/: config.rs  lib.rs  main.rs
camp-notification/src/abi/: email.rs  inapp.rs  mod.rs  sms.rs
camp-notification/src/fake/: mod.rs
camp-notification/src/model/: message.rs
camp-notification/src/services/: email.rs  inapp.rs  mod.rs  sms.rs
camp-notification/tests/: notification.rs
camp-test/: Cargo.toml  README.md
camp-test/examples/: move_vec.rs  ref.rs  tokio_sleep.rs
camp-test/src/: main.rs
camp-user-stat/: Cargo.toml  build.rs  user_stat.yml
camp-user-stat/examples/: fake.rs
camp-user-stat/migrations/: 20240705133209_initial.sql  20240705133434_initial.sql
camp-user-stat/src/: config.rs  lib.rs  main.rs
camp-user-stat/src/abi/: mod.rs
camp-user-stat/src/fake/: mod.rs
camp-user-stat/src/ioc/: mod.rs
camp-user-stat/src/model/: mod.rs
camp-user-stat/src/pb/: user_stat.rs
camp-user-stat/src/services/: mod.rs
camp-user-stat/tests/: services.rs
examples/: crm.rs
protos/: crm.proto
protos/crm/: messages.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto
protos/user-stat/: messages.proto  rpc.proto
