[workspace]
members = ["camp-macro", "camp-crm"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prost = {version = "0.12.6"}
prost-types = {version = "0.12.6"}
anyhow = {version = "1.0.82"}
tonic = {version = "0.11.0", features = ["tls", "zstd"]}
tonic-build = "0.11.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = "0.1.15"
