[workspace]
members = ["camp-macro", "camp-crm", "camp-test", "camp-user-stat", "camp-metadata", "camp-core"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prost = {version = "0.12.6"}
prost-types = {version = "0.12.6"}
anyhow = {version = "1.0.82"}
tonic = {version = "0.11.0", features = ["tls", "zstd"]}
tonic-build = "0.11.0"
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"]}
tokio-stream = "0.1.15"
chrono = "0.4.38"
sqlx={ version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "chrono",
    "tls-rustls",
]}
sqlx-db-tester = "0.4.2"
fake = {version = "2.9.2", features = ["derive", "chrono"]}
derive_builder = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9"
futures =  "0.3.30"
nanoid = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.61"

camp-crm = { path = "camp-crm" }
camp-core = { path = "camp-core" }
