[package]
name = "camp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = {workspace = true}
nanoid = {workspace = true}
rand = {workspace = true}
chrono = {workspace = true}
prost-types = {workspace = true}
prost = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
thiserror = {workspace = true}
tracing-subscriber = {workspace = true}
