[package]
name = "camp-crm"
version = "0.1.0"
edition = "2021"

[features]
default = []
local_utils = ["fake"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "metadata"
path = "src/metadata.rs"

[dependencies]
anyhow = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
futures = {workspace = true}
chrono = {workspace = true}
sqlx = {workspace = true}
sqlx-db-tester = {workspace = true}
fake = {workspace = true, optional = true}
prost = { worksapce = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
nanoid = {workspace = true}
rand = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
anyhow = {workspace = true}

[dev-dependencies]
camp-crm = {workspace = true, features = ["fake"]}
