[package]
name = "camp-crm"
version = "0.1.0"
edition = "2021"

[features]
default = []
local_utils = ["fake"]

[dependencies]
anyhow = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
futures = {workspace = true}
chrono = {workspace = true}
sqlx = {workspace = true}
sqlx-db-tester = {workspace = true}
fake = {workspace = true, optional = true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
nanoid = {workspace = true}
rand = {workspace = true}
prost-types = {workspace = true}
prost = {workspace = true}
derive_builder = {workspace = true}
camp-core = {workspace = true}
camp-metadata = {workspace = true}
camp-notification = {workspace = true}
camp-user-stat = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
proto-builder-trait = {workspace = true}
anyhow = {workspace = true}

[dev-dependencies]
camp-crm = {workspace = true, features = ["fake"]}
