[package]
name = "camp-crm"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["unimock", "tonic-mock"]

[dependencies]
anyhow = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
futures = {workspace = true}
chrono = {workspace = true}
sqlx = {workspace = true}
sqlx-db-tester = {workspace = true}
fake = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
nanoid = {workspace = true}
rand = {workspace = true}
prost-types = {workspace = true}
prost = {workspace = true}
derive_builder = {workspace = true}
camp-core = {workspace = true}
camp-metadata = {workspace = true}
camp-notification = {workspace = true}
camp-user-stat = {workspace = true}
itertools = {workspace = true}
thiserror = {workspace = true}
uuid = {workspace = true}
unimock = {workspace = true, optional = true}
tonic-mock = {workspace = true, optional = true}

[build-dependencies]
tonic-build = {workspace = true}
proto-builder-trait = {workspace = true}
anyhow = {workspace = true}

[dev-dependencies]
camp-crm = {workspace = true, features = ["test_utils"]}
