[package]
name = "camp-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
fake = {workspace = true}
prost-types = {workspace = true}
prost = {workspace = true}
camp-core = {workspace = true}
rand = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
anyhow = {workspace = true}
proto-builder-trait = {workspace = true}
