[package]
name = "camp-notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test_utils = ["fake", "sqlx-db-tester"]

[dependencies]
derive_builder = {workspace = true}
tonic = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
prost-types = {workspace = true}
prost = {workspace = true}
sqlx = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
fake = {workspace = true, optional = true}
sqlx-db-tester = {workspace = true, optional = true}
rand = {workspace = true}
camp-core = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
unimock = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
proto-builder-trait = {workspace = true}
anyhow = {workspace = true}
