[package]
name = "camp-user-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = {worksapce = true}
prost-types = {workspace = true}
anyhow = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
chrono = {workspace = true}
sqlx = {workspace = true}
nanoid = "0.4.0"
rand = "0.8.5"
fake = {workspace = true}
derive_builder = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
anyhow = {workspace = true}
