[package]
name = "camp-user-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_utils = ["sqlx-db-tester"]

[dependencies]
prost-types = {workspace = true}
prost = {workspace = true}
anyhow = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
chrono = {workspace = true}
sqlx = {workspace = true}
nanoid = "0.4.0"
rand = "0.8.5"
fake = {workspace = true}
futures = {workspace = true}
sqlx-db-tester = {workspace = true, optional = true}
thiserror = {workspace = true}
camp-core = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
itertools = {workspace = true}
derive_builder = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
derive_builder = {workspace = true}
anyhow = {workspace = true}
proto-builder-trait = {workspace = true}

[dev-dependencies]
camp-user-stat = {workspace = true, features = ["test_utils"]}
